--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -246,6 +246,11 @@ header.masthead .post-heading .subheading {
   display: block;
 }
 
+#headingaboutme {
+  font-size: 24px;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 header.masthead .post-heading .subheading {
   font-size: 24px;
   font-weight: 600;
