--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -246,10 +246,6 @@ header.masthead .post-heading .subheading {
   display: block;
 }
 
-#headingaboutme {
-  font-size: 24px;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
 
 header.masthead .post-heading .subheading {
   font-size: 24px;
@@ -294,6 +290,7 @@ header.masthead .post-heading .meta a {
 }
 
 .post-preview > a > .post-subtitle {
+  font-size: 20px;
   font-weight: 300;
   margin: 0 0 10px;
 }
@@ -422,4 +419,16 @@ footer .copyright {
 .btn-lg {
   font-size: 16px;
   padding: 25px 35px;
+}
+
+
+
+#headingaboutme {
+  font-size: 18px;
+  font-weight: 600;
+  font-family: 'Lora', 'Times New Roman', serif;
+}
+
+.image-about-me {
+  border-radius: 1%!important;
 }
